<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <android.support.v7.widget.Toolbar
        android:id="@+id/login_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginLeft="-15dp"
        android:layout_marginRight="-20dp"
        android:theme="@style/LsToolBar"
        app:popupTheme="@style/LsAppBarOverlay"
        app:title="@string/app_name"
        app:titleMarginTop="15dp"
        app:titleTextAppearance="@style/TitleStyle"
        app:titleTextColor="@android:color/background_light">
    </android.support.v7.widget.Toolbar>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_input_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_toolbar"
        android:layout_marginTop="30dp"
        app:counterEnabled="true"
        app:counterMaxLength="16"
        app:counterTextAppearance="@style/LsCounter"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:hintTextAppearance="@style/LsHint">

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="@string/username"
            android:maxLength="16"
            android:maxLines="1"
            android:padding="2dp"
            android:textColor="@android:color/white"
            android:textColorHint="#ffffffff"
            android:textSize="18sp" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_input_username"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        app:counterEnabled="true"
        app:counterMaxLength="16"
        app:counterTextAppearance="@style/LsCounter"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:hintTextAppearance="@style/LsHint">

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="@string/password"
            android:inputType="textVisiblePassword"
            android:maxLength="16"
            android:maxLines="1"
            android:padding="2dp"
            android:textColor="@android:color/white"
            android:textColorHint="#ffffffff"
            android:textSize="18sp" />
    </android.support.design.widget.TextInputLayout>

       <android.support.v7.widget.AppCompatButton

           android:layout_width="match_parent"
           android:layout_below="@+id/login_input_password"
           android:layout_height="50dp"
           android:gravity="center"
           android:textColor="@android:color/white"
           android:textSize="28sp"
           android:alpha="0.8"
           android:background="@drawable/btn_login"
           android:text=""
           tools:ignore="HardcodedText"
           android:clickable="false"
           android:enabled="false"/>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/login_login_action"
            android:layout_width="match_parent"
            android:layout_below="@+id/login_input_password"
            android:layout_height="50dp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:background="@android:color/transparent"
            android:text="登          录"
            tools:ignore="HardcodedText"
            android:clickable="true"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/login_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_login_action"
        android:layout_marginTop="20dp"
        android:autoLink="all"
        android:text="@string/forgetPassword"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/login_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/login_login_action"
        android:layout_marginTop="20dp"
        android:text="@string/userReg"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        tools:ignore="RtlHardcoded" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/login_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="32dp"
        android:text="第三方账号登录:"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="16sp"
        tools:ignore="HardcodedText" />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/login_qq"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/login_tip"
        android:alpha="0.7"
        android:src="@drawable/qq_login"
        tools:ignore="RtlHardcoded" />

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@id/login_qq"
        android:alpha="0.7"
        android:src="@drawable/mm_login"
        tools:ignore="RtlHardcoded" />
</RelativeLayout>



